# origin

DB/Lesson_5/: CMakeLists.txt  main.cpp
DB/Lesson_6/ConsoleApplication1/: ConsoleApplication1.cpp
DP/1/ConsoleApplication1/: ConsoleApplication1.cpp  SqlSelectQueryBuilder.h
DP/1/ConsoleApplication2/: ConsoleApplication2.cpp  SqlSelectQueryBuilder.h
DP/2/ConsoleApplication1/: ConsoleApplication1.cpp
DP/2/ConsoleApplication2/: ConsoleApplication2.cpp
DP/3/ConsoleApplication1/: ConsoleApplication1.cpp
DP/3/ConsoleApplication2/: ConsoleApplication2.cpp
DP/3/ConsoleApplication3/: ConsoleApplication3.cpp
Kursovaya_2/Bibliotek_cmake/CMAKE/: CMakeLists.txt
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/: CMakeLists.txt
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/app/: CMakeLists.txt  CMakeLists_old — копия.txt  main.cpp
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1/: CMakeLists.txt  Transport.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.1/: Air.h  CMakeLists.txt
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.1.1/: Broom.cpp  Broom.h  CMakeLists.txt
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.1.2/: CMakeLists.txt  Eagle.cpp  Eagle.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.1.3/: CMakeLists.txt  Magic_Carpet.cpp  Magic_Carpet.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.2/: CMakeLists.txt  Ground.cpp  Ground.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.2.1/: All_terrain_boots.cpp  All_terrain_boots.h  CMakeLists.txt
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.2.2/: CMakeLists.txt  Camel.cpp  Camel.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.2.3/: CMakeLists.txt  Centaur.cpp  Centaur.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib1.2.4/: CMakeLists.txt  Speedy_Camel.cpp  Speedy_Camel.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib_func/: CMakeLists.txt  Functions.cpp  Functions.h
Kursovaya_2/Bibliotek_cmake/Cmake_2/project_2/lib_racers/: CMakeLists.txt  Racers.h
Kursovaya_2/main/: Air.cpp  Air.h  All_terrain_boots.cpp  All_terrain_boots.h  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.h  Functions.h  Ground.h  Magic_Carpet.h  Racers.cpp  Racers.h  Speedy_Camel.cpp  Speedy_Camel.h  Transport.cpp  Transport.h  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
Lesson_11/Task_1/Biblioteki/: Biblioteki.sln
Lesson_11/Task_2/Dynamic/: Dynamic.sln
Lesson_11/Task_3/: CMakeLists.txt  Dynamic_.cpp  Dynamic_.h
Lesson_11/Task_5/: Equel_Triangle.h  Figure.h  Triangle.h
Lesson_12/Task_1/Project1/: main.cpp
Lesson_12/Task_1/UnitTest1/: UnitTest1.cpp
Lesson_12/Task_2/ConsoleApplication2/: ConsoleApplication2.cpp  extended_array.h
Lesson_12/Task_2/UnitTest2/: UnitTest2.cpp
Lesson_12/Task_3/Project3/: extended_array.h  main.cpp
Lesson_12/Task_3/UnitTest3/: UnitTest3.cpp
Lesson_6/Task_1/ConsoleApplication1/: Math1.cpp  Math1.h  Task_1.cpp
Lesson_6/Task_2/ConsoleApplication1/: Counter.cpp  Counter.h  Task_2.cpp
Lesson_6/Task_3.2/ConsoleApplication1/: Equel_Triangle.h  Figure.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Romb.h
Lesson_6/Task_3/ConsoleApplication1/: Figure.cpp  Figure.h  Quadrangle.cpp  Quadrangle.h  Task_3.cpp  Triangle.cpp  Triangle.h
MAP/1/ConsoleApplication1/: ConsoleApplication1.cpp
MAP/1/ConsoleApplication2/: ConsoleApplication2.cpp
MAP/2/ConsoleApplication1/: ConsoleApplication1.cpp
MAP/2/ConsoleApplication2/: ConsoleApplication2.cpp
MAP/2/ConsoleApplication3/: ConsoleApplication3.cpp
MAP/3/ConsoleApplication1/: ConsoleApplication1.cpp
MAP/3/ConsoleApplication2/: ConsoleApplication2.cpp
MAP/4/1/: Dockerfile
MAP/4/2/: Dockerfile
cppl/ConsoleApplication_1/: ConsoleApplication_1.cpp
cppl/ConsoleApplication_10.1/: ConsoleApplication_10.1.cpp
cppl/ConsoleApplication_10.2/: ConsoleApplication_10.2.cpp
cppl/ConsoleApplication_11.1/: ConsoleApplication_11.1.cpp
cppl/ConsoleApplication_11.2/: ConsoleApplication_11.2.cpp
cppl/ConsoleApplication_3.1/: ConsoleApplication_3.1.cpp
cppl/ConsoleApplication_3.2/: ConsoleApplication_3.2.cpp
cppl/ConsoleApplication_4/: main.cpp
cppl/ConsoleApplication_5.1/: ConsoleApplication_5.1.cpp
cppl/ConsoleApplication_5.2/: ConsoleApplication_5.2.cpp
cppl/ConsoleApplication_5.3/: ConsoleApplication_5.3.cpp
cppl/ConsoleApplication_7.1/: ConsoleApplication_7.1.cpp
cppl/ConsoleApplication_7.2/: ConsoleApplication_7.2.cpp
cppl/ConsoleApplication_7.3/: ConsoleApplication_7.3.cpp
cppl/ConsoleApplication_8.1/: ConsoleApplication_8.1.cpp
cppl/ConsoleApplication_8.2/: ConsoleApplication_8.2.cpp
cppl/Kursovaya/: Kursovaya.cpp
cppl/Kursovaya_1.1/: Kursovaya_1.1.cpp  test.ini
homeworks_algo/ConsoleApplication3/: ConsoleApplication3.3.cpp  ConsoleApplication3.cpp
homeworks_algo/ConsoleApplication4.1/: ConsoleApplication4.1.cpp
homeworks_algo/ConsoleApplication4.2/: ConsoleApplication4.2.cpp
homeworks_algo/ConsoleApplication4.3/: ConsoleApplication4.3.cpp
homeworks_algo/ConsoleApplication6.1/: ConsoleApplication6.1.cpp
homeworks_algo/ConsoleApplication6.2/: ConsoleApplication6.2.cpp
homeworks_algo/ConsoleApplication6.3/: ConsoleApplication6.3.cpp
homeworks_algo/ConsoleApplication7.1/: ConsoleApplication7.1.cpp
homeworks_algo/ConsoleApplication8.1/: ConsoleApplication8.1.cpp
homeworks_algo/ConsoleApplication8.2/: ConsoleApplication8.2.cpp
homeworks_algo/ConsoleApplication_5.1/: ConsoleApplication_5.1.cpp
homeworks_algo/ConsoleApplication_5.2/: ConsoleApplication_5.2.cpp
lesson_10/Task_1/: source.cpp
lesson_10/Task_2/: CMakeLists.txt  main.cpp
lesson_10/Task_2/cpp_files/: Equel_Triangle.cpp  Figure.cpp  Iso_Triangle.cpp  Parallelogram.cpp  Quadrangle.cpp  Rectangle.cpp  Right_Triangle.cpp  Romb.cpp  Square.cpp  Triangle.cpp
lesson_10/Task_2/h_files/: Right_Triangle.h  Square.h  Triangle.h
lesson_2/Task_1/: Task_1.cpp
lesson_2/Task_2/: Task_2.cpp
lesson_2/Task_3/: Task_3.cpp
lesson_4/Task_1/ConsoleApplication1/: Task_1.cpp
lesson_4/Task_2/ConsoleApplication1/: Task_2.cpp
lesson_5/Task_3/: Task_3.cpp
(+148 files in other folders)
