cmake_minimum_required(VERSION 3.22.0)
project(figures)
add_executable(geometry_figures "main.cpp" "cpp_files/Equel_Triangle.cpp" 
"cpp_files/Figure.cpp" "cpp_files/Iso_Triangle.cpp" "cpp_files/Parallelogram.cpp" 
"cpp_files/Quadrangle.cpp" "cpp_files/Rectangle.cpp" "cpp_files/Right_Triangle.cpp" 
"cpp_files/Romb.cpp" "cpp_files/Square.cpp" "cpp_files/Triangle.cpp")